# Videx

./: README.md  how to run.txt  implementation_plan.md
videx-backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
videx-backend/app/: __init__.py  config.py  dependencies.py  main.py
videx-backend/app/api/: __init__.py
videx-backend/app/api/v1/: __init__.py  router.py
videx-backend/app/api/v1/endpoints/: __init__.py  analyze.py  auth.py  health.py  prompts.py  stream.py  upload.py
videx-backend/app/api/v1/middleware/: __init__.py  rate_limit.py
videx-backend/app/core/: __init__.py  exceptions.py  security.py
videx-backend/app/core/prompts/: analysis_system.txt  detractor_system.txt
videx-backend/app/db/: __init__.py  session.py
videx-backend/app/db/migrations/: env.py
videx-backend/app/models/: __init__.py  base.py  job.py  prompt.py  user.py
videx-backend/app/schemas/: __init__.py  analysis.py  auth.py  common.py  prompt.py  upload.py
videx-backend/app/services/: __init__.py  analysis_service.py  cloudinary_service.py  mimo_service.py  prompt_service.py  sse_service.py
videx-backend/app/tasks/: __init__.py  analyze_task.py  celery_app.py  prompt_task.py
videx-backend/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
videx-backend/tests/: __init__.py  conftest.py
videx-backend/tests/integration/: test_analyze_endpoint.py  test_prompt_endpoint.py
videx-backend/tests/unit/: test_cloudinary_service.py  test_mimo_service.py  test_prompt_service.py
videx-frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
videx-frontend/app/: globals.css  layout.tsx  page.tsx
videx-frontend/hooks/: useSSE.ts  useUpload.ts
videx-frontend/lib/: api.ts  constants.ts  utils.ts
videx-frontend/store/: videx.store.ts
videx-frontend/types/: api.types.ts
(+13 files in other folders)
